6352071 MDB ::interrupts need not display non-ISR entries on x86 6354060 Add ::interrupts support for uppc(7d) based systems

--- a/usr/src/cmd/mdb/i86pc/modules/uppc/amd64/Makefile
+++ b/usr/src/cmd/mdb/i86pc/modules/uppc/amd64/Makefile
@@ -25,5 +25,18 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-SUBDIRS = pcplusmp unix uppc
-include ../../Makefile.subdirs
+MODULE = uppc.so
+MDBTGT = kvm
+
+MODSRCS = uppc.c
+
+include ../../../../../Makefile.cmd
+include ../../../../../Makefile.cmd.64
+include ../../../../intel/Makefile.amd64
+include ../../../Makefile.i86pc
+include ../../../../Makefile.module
+
+CPPFLAGS += -DMP -D_MACHDEP
+CPPFLAGS += -I../../../../common
+CPPFLAGS += -I$(SRC)/uts/intel
+CPPFLAGS += -I$(SRC)/uts/i86pc
