--- a/usr/src/cmd/mdb/i86pc/modules/uppc/ia32/Makefile
+++ b/usr/src/cmd/mdb/i86pc/modules/uppc/ia32/Makefile
@@ -25,5 +25,17 @@
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-SUBDIRS = pcplusmp unix uppc
-include ../../Makefile.subdirs
+MODULE = uppc.so
+MDBTGT = kvm
+
+MODSRCS = uppc.c
+
+include ../../../../../Makefile.cmd
+include ../../../../intel/Makefile.ia32
+include ../../../Makefile.i86pc
+include ../../../../Makefile.module
+
+CPPFLAGS += -DMP -D_MACHDEP
+CPPFLAGS += -I../../../../common
+CPPFLAGS += -I$(SRC)/uts/intel
+CPPFLAGS += -I$(SRC)/uts/i86pc
