6308047 gcc and cmd/prtdiag don't get along 6358577 audioconvert isn't built when __GNUC is set

--- a/usr/src/cmd/audio/Makefile
+++ b/usr/src/cmd/audio/Makefile
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -30,15 +30,12 @@
 
 include ../Makefile.cmd
 
-AUDIOCONVERT= audioconvert
-# XX64 audioconvert requires C++
-$(__GNUC)AUDIOCONVERT=
 SUBDIRS =			\
 		mixerctl	\
 		utilities .WAIT \
 		audioplay	\
 		audiorecord	\
-		$(AUDIOCONVERT)	\
+		audioconvert	\
 		samples
 
 AUDIODIR= $(ROOT)/usr/share/audio
