6360181 warlock typo in scsa2usb Makefile

--- a/usr/src/uts/sparc/scsa2usb/Makefile
+++ b/usr/src/uts/sparc/scsa2usb/Makefile
@@ -165,4 +165,4 @@ sd.files:
 	@cd ../sd; pwd; $(MAKE) warlock_alone
 
 st.files:
-	@cd ../sd; pwd; $(MAKE) warlock_alone
+	@cd ../st; pwd; $(MAKE) warlock_alone
