6299476 DM Does not interoperate with TS90 switch, cannot discover SRP targets 6308117 IB Nexus BUS_CONFIG_ONE will need to load HCA drivers during boot 6309515 ibdm should MADs with unique transaction ID 6309525 IOC vendor and sub-vendor ID has an endian issue 6321383 tavor moving queue pairs out of reset can take a while 6332260 ibt_open_rc_channel: redirected inputs needs better handling 6333763 crload test causes system hangs and other InfiniBand CM failures under stress 6350831 ibt_get_paths() returns IBT_HCA_PORT_NOT_ACTIVE when second hca has no active ports 6361204 tavor fmr can invalidate memory regions sooner

--- a/usr/src/uts/common/io/ib/ibnex/ib.conf
+++ b/usr/src/uts/common/io/ib/ibnex/ib.conf
@@ -27,6 +27,11 @@
 #
 # Configuration file for the IB nexus driver
 #
+# The name and class property are required to indicate that IB nexus
+# driver is a child of the root nexus driver. DO NOT DELETE LINE BELOW
+name="ib" class="root";
+
+#
 # The "port-svc-list"  determines the communication  services that are
 # supported on the system per port. The user will  update the property
 # to add new services. IB nexus driver creates port device nodes based
