6314484 newman 1.1 flash disk cannot mount or fdisk 6351805 scsa2usb needs better residue handling

--- a/usr/src/uts/common/io/usb/scsa2usb/scsa2usb.conf
+++ b/usr/src/uts/common/io/usb/scsa2usb/scsa2usb.conf
@@ -118,8 +118,12 @@
 #		and become unusable.
 #
 #	reduced-cmd-support	- "true" if the device cannot handle
-#		mode sense, start/stop, and doorlock.
-#		This is the only legal value for this parameter.
+#		mode sense, or start/stop, or doorlock, or doesn not
+#		report correct residues on data transfers.
+#		This is the only legal value for this parameter. This
+#		setting is recommended for USB memory sticks and USB2.0
+#		enclosures which may not be USB Mass Storage spec
+#		compliant.
 #
 # NOTE: As a special case, "*" may be used as a wildcard which matches
 #	any field. This is useful in situations where more than one
