--- a/usr/src/uts/sun4u/boston/Makefile.boston
+++ b/usr/src/uts/sun4u/boston/Makefile.boston
@@ -1,8 +1,29 @@
 #
+# CDDL HEADER START
+#
+# The contents of this file are subject to the terms of the
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
+#
+# You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+# or http://www.opensolaris.org/os/licensing.
+# See the License for the specific language governing permissions
+# and limitations under the License.
+#
+# When distributing Covered Code, include this CDDL HEADER in each
+# file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+# If applicable, add the following below this CDDL HEADER, with the
+# fields enclosed by brackets "[]" replaced with your own identifying
+# information: Portions Copyright [yyyy] [name of copyright owner]
+#
+# CDDL HEADER END
+#
+
+#
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 #
 #	Global definitions for sun4u implementation specific modules.
 #
@@ -34,6 +55,7 @@ USR_BOSTON_ISYS_DIR	= $(USR_BOSTON_INC_DIR)/sys
 USR_BOSTON_SBIN_DIR	= $(USR_BOSTON_DIR)/sbin
 USR_BOSTON_SBIN_EEPROM	= $(USR_BOSTON_SBIN_DIR)/eeprom
 USR_BOSTON_SBIN_PRTDIAG	= $(USR_BOSTON_SBIN_DIR)/prtdiag
+USR_BOSTON_SBIN_FRUADM	= $(USR_BOSTON_SBIN_DIR)/fruadm
 USR_BOSTON_SBIN_TRAPSTAT = $(USR_BOSTON_SBIN_DIR)/trapstat
 USR_BOSTON_LIB_DIR	= $(USR_BOSTON_DIR)/lib
 
