PSARC 2005/581 EOF of the chs driver PSARC 2005/582 EOF of the dbri driver 6205971 ON bits shouldn't be using obsoleted DDI DMA interfaces

--- a/usr/src/uts/Makefile.uts
+++ b/usr/src/uts/Makefile.uts
@@ -201,8 +201,9 @@ LINT_MODULE=	$(MODULE)
 EXTRA_OPTIONS		= 
 AS_DEFS			= -D_ASM -D__STDC__=0
 
-ALWAYS_DEFS_32		= -D_KERNEL -D_SYSCALL32
-ALWAYS_DEFS_64		= -D_KERNEL -D_SYSCALL32 -D_SYSCALL32_IMPL -D_ELF64
+ALWAYS_DEFS_32		= -D_KERNEL -D_SYSCALL32 -D_DDI_STRICT
+ALWAYS_DEFS_64		= -D_KERNEL -D_SYSCALL32 -D_SYSCALL32_IMPL -D_ELF64 \
+			-D_DDI_STRICT
 #
 # XX64	This should be defined by the compiler!
 #
