--- a/usr/src/uts/i86pc/Makefile.files
+++ b/usr/src/uts/i86pc/Makefile.files
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,6 +18,7 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
@@ -115,11 +115,6 @@ TCIC_OBJS +=	tcic.o
 ATA_OBJS +=	$(GHD_OBJS) ata_blacklist.o ata_common.o ata_disk.o \
 		ata_dma.o atapi.o atapi_fsm.o ata_debug.o \
 		sil3xxx.o
-
-CHS_OBJS	+= chs.o chs_busops.o chs_conf.o chs_dac.o	\
-		   chs_devops.o chs_hba.o chs_interrupt.o	\
-		   chs_intr.o chs_queue.o chs_raid.o		\
-		   chs_transport.o chs_viper.o chs_viperconf.o
 
 NCRS_OBJS	+= glm.o
 ELXL_OBJS	+= elxl.o elxl_cmn.o mii.o
