--- a/usr/src/uts/i86pc/Makefile.i86pc
+++ b/usr/src/uts/i86pc/Makefile.i86pc
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,6 +18,7 @@
 #
 # CDDL HEADER END
 #
+
 #
 # uts/i86pc/Makefile.i86pc
 #
@@ -248,7 +248,6 @@ DRV_KMODS	+= npe
 
 DRV_KMODS_32	+= bscv
 DRV_KMODS_32	+= bscbus
-DRV_KMODS_32	+= chs
 DRV_KMODS	+= elxl
 DRV_KMODS	+= fd
 DRV_KMODS	+= fdc
