--- a/usr/src/uts/i86pc/io/mscsi.conf
+++ b/usr/src/uts/i86pc/io/mscsi.conf
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,11 +18,12 @@
 #
 # CDDL HEADER END
 #
+
 #
-# Copyright 2004 Sun Microsystems, Inc.  All Rights Reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-
+#
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
 
 #
@@ -38,16 +38,6 @@
 # the generic class entries below can be uncommented, and the
 # driver-specific entries can be removed.
 #
-name="mscsi" parent="chs" reg=0,0,0 mscsi-bus=0;
-name="mscsi" parent="chs" reg=1,0,0 mscsi-bus=1;
-name="mscsi" parent="chs" reg=2,0,0 mscsi-bus=2;
-name="mscsi" parent="chs" reg=3,0,0 mscsi-bus=3;
-name="mscsi" parent="chs" reg=4,0,0 mscsi-bus=4;
-name="mscsi" parent="chs" reg=5,0,0 mscsi-bus=5;
-name="mscsi" parent="chs" reg=6,0,0 mscsi-bus=6;
-name="mscsi" parent="chs" reg=7,0,0 mscsi-bus=7;
-name="mscsi" parent="chs" reg=8,0,0 mscsi-bus=8;
-name="mscsi" parent="chs" reg=9,0,0 mscsi-bus=9;
 
 #name="mscsi" class="mscsi" reg=0,0,0 mscsi-bus=0;
 #name="mscsi" class="mscsi" reg=1,0,0 mscsi-bus=1;
