--- a/usr/src/uts/sun/Makefile.files
+++ b/usr/src/uts/sun/Makefile.files
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,6 +18,7 @@
 #
 # CDDL HEADER END
 #
+
 #
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
@@ -54,10 +54,6 @@ BPP_OBJS +=	bpp.o
 
 CGSIX_OBJS +=	cgsix.o
 
-DBRI_OBJS +=	dbri.o		dbri_conf.o	dbri_connect.o \
-		dbri_driver.o	dbri_isdn.o	dbri_isr.o \
-		dbri_mmcodec.o	dbri_pipe.o	dbri_subr.o
-
 DMA_OBJS +=	dmaga.o
 
 ESP_OBJS +=	esp.o
@@ -90,7 +86,7 @@ DADA_OBJS +=	dcd_hba.o       dcd_transport.o \
 		dcd_control.o   dcd_resource.o  dcd_confsubr.o dcd_subr.o \
 		dcd_confdata.o
 
-ATA_OBJS +=	ata_common.o atapi.o ata_disk.o ghd.o ghd_dma.o ghd_scsi.o \
+ATA_OBJS +=	ata_common.o atapi.o ata_disk.o ghd.o ghd_scsi.o \
 		ghd_debug.o ghd_scsa.o ghd_gcmd.o ghd_queue.o ghd_timer.o \
 		ghd_waitq.o cmd.o acersb.o sil.o
 
