--- a/usr/src/tools/scripts/Makefile
+++ b/usr/src/tools/scripts/Makefile
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -38,7 +37,6 @@ SHFILES= \
 	elfcmp \
 	flg.flp \
 	genoffsets \
-	jstyle \
 	keywords \
 	makebfu \
 	mkacr \
@@ -57,6 +55,7 @@ SHFILES= \
 PERLFILES= \
 	check_rtime \
 	hdrchk \
+	jstyle \
 	validate_flg \
 	validate_paths \
 	wdiff
@@ -69,6 +68,7 @@ MAN1FILES= \
 	check_rtime.1 \
 	cstyle.1 \
 	flg.flp.1 \
+	jstyle.1 \
 	mkacr.1 \
 	nightly.1 \
 	sccscp.1 \
