6339766 Solaris 10 CPIO does not change own on files using -pdum options and with rstchown=0 in system file

--- a/usr/src/cmd/cpio/Makefile
+++ b/usr/src/cmd/cpio/Makefile
@@ -19,12 +19,10 @@
 #
 # CDDL HEADER END
 #
-#
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-#
-# Copyright 1989-2003 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
+#ident	"%Z%%M%	%I%	%E% SMI"
 
 PROG= cpio
 
@@ -32,7 +30,7 @@ OBJS= cpio.o cpiostat.o
 SRCS= $(OBJS:%.o=%.c)
 
 include ../Makefile.cmd
-CPPFLAGS += -D_FILE_OFFSET_BITS=64
+CPPFLAGS += -D_FILE_OFFSET_BITS=64 -DSOLARIS_PRIVS
 
 LDLIBS += -lsec
 XGETFLAGS += -a -x cpio.xcl
