--- a/usr/src/lib/libsec/Makefile
+++ b/usr/src/lib/libsec/Makefile
@@ -31,7 +31,8 @@ include		../Makefile.lib
 
 HDRDIR=		common
 HDRS=		aclutils.h
-SUBDIRS=	$(MACH) $(BUILD64) $(MACH64)
+SUBDIRS=	$(MACH)
+$(BUILD64)SUBDIRS += $(MACH64)
 
 all :=		TARGET= all
 clean :=	TARGET= clean
