PSARC 2005/749 Panther libc_psr 5062145 hwcap flags for panther 6297798 memmove could be substantially optimized (could help SPEC CPU2006 candidate benchmarks) for US-IV+ 6357980 block store in memcpy() hurts performance on USIV+

--- a/usr/src/lib/libc_psr/Makefile
+++ b/usr/src/lib/libc_psr/Makefile
@@ -30,7 +30,7 @@
 
 include ../Makefile.lib
 
-SUBDIRS=	sun4u sun4u-us3 sun4v sun4v_hwcap1
+SUBDIRS=	sun4u sun4u-us3 sun4u_hwcap1 sun4u_hwcap2 sun4v sun4v_hwcap1 etc
 
 all :=		TARGET= all
 install :=	TARGET= install
