--- a/usr/src/lib/libc_psr/spec/sun4u_hwcap2/sparcv9/Makefile
+++ b/usr/src/lib/libc_psr/spec/sun4u_hwcap2/sparcv9/Makefile
@@ -20,11 +20,34 @@
 # CDDL HEADER END
 #
 #
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
+#
 #pragma ident	"%Z%%M%	%I%	%E% SMI"
 #
-# Copyright (c) 2000 by Sun Microsystems, Inc.
-# All rights reserved.
-#
-# lib/libc_psr/spec/sun4u-us3/Makefile
+# usr/src/lib/libc_psr/spec/sun4u_hwcap2/sparcv9/Makefile
 
-include	$(SRC)/lib/Makefile.spec.arch
+.KEEP_STATE:
+
+LIBRARY	=	libc_psr_hwcap2.a
+VERS	=	.1
+
+PLATFORM=	sun4u-us3
+ALT_PLAT=	sun4u_hwcap2
+CLASS	=	64
+
+OBJECTS	=	c_psr-$(MACH64).o
+
+SPECVERS=	-$(MACH64)
+
+include	$(SRC)/lib/Makefile.lib
+include	$(SRC)/lib/Makefile.lib.64
+include $(SRC)/lib/libc_psr/spec/$(ALT_PLAT)/Makefile.links
+
+# Uncomment the following if the linker complains
+#sparcv9_C_PICFLAGS  = -K PIC
+
+include	$(SRC)/lib/Makefile.spec
+include	$(SRC)/lib/Makefile.spec.psm
+
+install:
