--- a/usr/src/lib/libc_psr/spec/sun4u_hwcap1/Makefile.links
+++ b/usr/src/lib/libc_psr/spec/sun4u_hwcap1/Makefile.links
@@ -25,24 +25,33 @@
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# usr/src/lib/libc_psr/spec/Makefile
+# usr/src/lib/libc_psr/spec/sun4u_hwcap1/Makefile.links
 
-SUBDIRS=	sun4u sun4u_hwcap1 sun4u_hwcap2 sun4v_hwcap1
+include $(SRC)/Makefile.psm
 
-all		:=	TARGET= all
-install		:=	TARGET= install
-clean		:=	TARGET= clean
-clobber		:=	TARGET= clobber
-lint		:=	TARGET= lint
+MODULE = abi
 
-.KEEP_STATE:
+#
+# links in /usr/platform
+#
+LINKED_PLATFORMS	= SUNW,Sun-Blade-1000
+LINKED_PLATFORMS	+= SUNW,Sun-Blade-1500
+LINKED_PLATFORMS	+= SUNW,Sun-Blade-2500
+LINKED_PLATFORMS	+= SUNW,A70
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-V445
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-V215
+LINKED_PLATFORMS	+= SUNW,Sun-Fire
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-V240
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-V250
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-V440
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-280R
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-15000
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-880
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-480R
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-V890
+LINKED_PLATFORMS	+= SUNW,Sun-Fire-V490
+LINKED_PLATFORMS	+= SUNW,Netra-T12
+LINKED_PLATFORMS	+= SUNW,Netra-T4
+LINKED_PLATFORMS	+= SUNW,Netra-CP3010
 
-all install clean clobber lint: $(SUBDIRS)
-
-# spec files do not have msgs or catalogs
-_msg catalog:
-
-$(SUBDIRS): FRC
-	@cd $@; pwd; $(MAKE) $(TARGET)
-
-FRC:
+include $(SRC)/lib/libc_psr/spec/Makefile.com
