PSARC 2005/738 SSG-Availability Feature Set 2 APR PSARC 2005/748 FMA for UltraSPARC DataPath 6229087 SPARC CPU/Mem DE should track DIMM serial numbers on Serengeti/Starcat 6281100 RFE: AVL-FS2: Support Anchored Page Retire for LW8, Serengeti & Starcat platforms 6281113 RFE: AVL-FS2: FMA-AVL Datapath Diagnosis Coordination

--- a/usr/src/cmd/fm/modules/sun4u/Makefile
+++ b/usr/src/cmd/fm/modules/sun4u/Makefile
@@ -20,11 +20,11 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
 
-SUBDIRS = cpumem-diagnosis USII-io-diagnosis
+SUBDIRS = cpumem-diagnosis datapath-retire USII-io-diagnosis
 
 include ../../Makefile.subdirs
