PSARC 2005/755 FMA Transport Layer 6367044 FMA Transport Layer 6216286 fmd core dumps when shutting down under heavy event load 6220169 fmd should support per-module configuration overrides in /etc 6266851 internal fmd events should not refer to sunos 6295417 fmd should publish an event when a problem has been repaired 6333184 fmsim can exhaust sysevent channel resources 6342977 fmd segfaults if it cannot load fmd-self-diagnosis 6367046 fmsim should set _THREAD_ERROR_DETECTION=2 6367047 fmd is mis-using cond_broadcast in several places 6367049 fmd_asru_hash_recreate() leaks buffer in error path 6367051 fmd mod_ustat data is modified after being freed 6367053 fmd leaks queued timer structures on module unload 6367057 memory leaks in __rpcb_findaddr_timed() error paths 6367061 fmd when run as non-root should not exit on dr event bind failure 6367063 fmd_rpc_svc_create_local() leaks memory when local service is bound 6367067 fmsim should support -w option to wait for user input to exit 6367068 nvlist_add_nvlist() and nvlist_add_nvlist_array() should check for NULL 6367069 fmd_log_errmsg() fails for EFDL_VERSION 6367070 fmd debug switch should have a way to display TRACE() result 6367073 fmd trace buffer tag is truncating tags above 0xff 6367075 fmd debug switch error when multiple tags are specified

--- a/usr/src/cmd/fm/fmd/Makefile.fmd
+++ b/usr/src/cmd/fm/fmd/Makefile.fmd
@@ -63,21 +63,22 @@ SRCS += fmd.c \
 	fmd_subr.c \
 	fmd_svc_adm.c \
 	fmd_svc_api.c \
+	fmd_sysevent.c \
 	fmd_thread.c \
 	fmd_time.c \
 	fmd_timerq.c \
 	fmd_trace.c \
-	fmd_transport.c \
 	fmd_ustat.c \
 	fmd_xdr_adm.c \
-	fmd_xdr_api.c
+	fmd_xdr_api.c \
+	fmd_xprt.c
 
 PROG = fmd
 MANIFEST = ../common/$(PROG).xml
 
 ROOTPDIR = $(ROOT)/usr/lib/fm/$(PROG)
 ROOTVDIR = $(ROOT)/var/fm/$(PROG)
-ROOTVSUB = $(ROOTVDIR)/ckpt $(ROOTVDIR)/rsrc
+ROOTVSUB = $(ROOTVDIR)/ckpt $(ROOTVDIR)/rsrc $(ROOTVDIR)/xprt
 ROOTPROG = $(ROOTPDIR)/$(PROG)
 
 ROOTMANIFESTDIR = $(ROOTSVCSYSTEM)
