--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -254,7 +254,7 @@ DRV_KMODS	+= openeepr options sd ses st
 DRV_KMODS	+= ssd
 DRV_KMODS	+= ecpp
 DRV_KMODS	+= hid hubd ehci ohci uhci usb_mid scsa2usb usbprn ugen
-DRV_KMODS	+= usbser usbsksp usbsprl
+DRV_KMODS	+= usbser usbsksp usbsprl usbs49_fw
 DRV_KMODS	+= usb_as usb_ac
 DRV_KMODS	+= usbskel
 DRV_KMODS	+= hci1394 av1394 scsa1394 dcam1394
