--- a/usr/src/uts/intel/usbs49_fw/Makefile
+++ b/usr/src/uts/intel/usbs49_fw/Makefile
@@ -13,6 +13,21 @@
 #
 # When distributing Covered Code, include this CDDL HEADER in each
 # file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+#
+# CDDL HEADER START
+#
+# The contents of this file are subject to the terms of the
+# Common Development and Distribution License, Version 1.0 only
+# (the "License").  You may not use this file except in compliance
+# with the License.
+#
+# You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+# or http://www.opensolaris.org/os/licensing.
+# See the License for the specific language governing permissions
+# and limitations under the License.
+#
+# When distributing Covered Code, include this CDDL HEADER in each
+# file and include the License file at usr/src/OPENSOLARIS.LICENSE.
 # If applicable, add the following below this CDDL HEADER, with the
 # fields enclosed by brackets "[]" replaced with your own identifying
 # information: Portions Copyright [yyyy] [name of copyright owner]
@@ -20,16 +35,12 @@
 # CDDL HEADER END
 #
 #
-#
 # Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
-# uts/intel/usbsksp/Makefile
-
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
+#ident	"%Z%%M%	%I%	%E% SMI"
 #
-#	This makefile drives the production of the Keyspan USB Serial
-#	Adapter driver.
+# uts/intel/usbs49_fw/Makefile
 #
 #	Path to the base of the uts directory tree (usually /usr/src/uts).
 #
@@ -38,17 +49,15 @@ UTSBASE	= ../..
 #
 #	Define the module and object file sets.
 #
-MODULE		= usbsksp
-OBJECTS		= $(USBSER_KEYSPAN_OBJS:%=$(OBJS_DIR)/%)
-LINTS		= $(USBSER_KEYSPAN_OBJS:%.o=$(LINTS_DIR)/%.ln)
-ROOTMODULE	= $(ROOT_DRV_DIR)/$(MODULE)
+MODULE		= usbs49_fw
+OBJECTS		= $(USBS49_FW_OBJS:%=$(OBJS_DIR)/%)
+LINTS		= $(USBS49_FW_OBJS:%.o=$(LINTS_DIR)/%.ln)
+ROOTMODULE	= $(ROOT_MISC_DIR)/$(MODULE)
 
 #
 #	Include common rules.
 #
 include $(UTSBASE)/intel/Makefile.intel
-
-LDFLAGS         += -dy -Nmisc/usba -Nmisc/usbser -Nmisc/usbs49_fw
 
 #
 #	Define targets
@@ -57,15 +66,18 @@ ALL_TARGET	= $(BINARY)
 LINT_TARGET	= $(MODULE).lint
 INSTALL_TARGET	= $(BINARY) $(ROOTMODULE)
 
+#
+#	Default build targets.
+#
 .KEEP_STATE:
-
-all:		$(ALL_DEPS)
 
 def:		$(DEF_DEPS)
 
-clean:		$(CLEAN_DEPS);
+all:		$(ALL_DEPS)
 
-clobber:	$(CLOBBER_DEPS);
+clean:		$(CLEAN_DEPS)
+
+clobber:	$(CLOBBER_DEPS)
 
 lint:		$(LINT_DEPS)
 
