6367872 usbs49_fw module should not be replaced when upgrading system.

--- a/usr/src/pkgdefs/SUNWukspfw/Makefile
+++ b/usr/src/pkgdefs/SUNWukspfw/Makefile
@@ -20,12 +20,14 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 #ident	"%Z%%M%	%I%	%E% SMI"
  
 include ../Makefile.com
+
+DATAFILES += i.preserve
 
 .KEEP_STATE:
 
