--- a/usr/src/uts/sparc/Makefile.sparc.shared
+++ b/usr/src/uts/sparc/Makefile.sparc.shared
@@ -19,7 +19,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -254,7 +254,7 @@ DRV_KMODS	+= openeepr options sd ses st
 DRV_KMODS	+= ssd
 DRV_KMODS	+= ecpp
 DRV_KMODS	+= hid hubd ehci ohci uhci usb_mid scsa2usb usbprn ugen
-DRV_KMODS	+= usbser usbsksp usbsprl usbs49_fw
+DRV_KMODS	+= usbser usbsksp usbsprl
 DRV_KMODS	+= usb_as usb_ac
 DRV_KMODS	+= usbskel
 DRV_KMODS	+= hci1394 av1394 scsa1394 dcam1394
@@ -349,7 +349,7 @@ MISC_KMODS	+= krtld
 MISC_KMODS	+= rpcsec rpcsec_gss kgssapi kmech_dummy
 MISC_KMODS	+= kmech_krb5
 MISC_KMODS	+= fssnap_if
-MISC_KMODS	+= hidparser kbtrans usba usba10
+MISC_KMODS	+= hidparser kbtrans usba usba10 usbs49_fw
 MISC_KMODS	+= s1394
 MISC_KMODS	+= hpcsvc pcicfg pcihp
 MISC_KMODS	+= rsmops
