6363181 enable Target 7 in kernel/drv/sd.conf to support LSI1068x/e SAS controller

--- a/usr/src/uts/sun/io/scsi/targets/sd.conf
+++ b/usr/src/uts/sun/io/scsi/targets/sd.conf
@@ -2,9 +2,8 @@
 # CDDL HEADER START
 #
 # The contents of this file are subject to the terms of the
-# Common Development and Distribution License, Version 1.0 only
-# (the "License").  You may not use this file except in compliance
-# with the License.
+# Common Development and Distribution License (the "License").
+# You may not use this file except in compliance with the License.
 #
 # You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
 # or http://www.opensolaris.org/os/licensing.
@@ -19,10 +18,12 @@
 #
 # CDDL HEADER END
 #
+
 #
-# Copyright (c) 1992, by Sun Microsystems, Inc.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
+# Use is subject to license terms.
 #
-#ident	"%Z%%M%	%I%	%E% SMI"
+# ident	"%Z%%M%	%I%	%E% SMI"
 
 name="sd" class="scsi" class_prop="atapi"
 	target=0 lun=0;
@@ -68,3 +69,12 @@ name="sd" class="scsi"
 
 name="sd" class="scsi"
 	target=15 lun=0;
+
+#
+# Enable Target 7 for the mpt SCSI/SAS/SATA driver.  Target 7 has
+# traditionally been reserved for legacy SCSI HBAs, but SAS controllers
+# supported by the mpt driver do not use target 7 for that purpose.
+# Enabling Target 7 allows the use of 8 disks on those controllers.
+#
+name="sd" parent="mpt"
+	target=7 lun=0;
