6362897 JNI throws an UnsupportedOperationException on invalid dataset path 6363276 Update JNI to support IO statistics 6364781 JNI should support pool state

--- a/usr/src/cmd/availdevs/Makefile
+++ b/usr/src/cmd/availdevs/Makefile
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -38,7 +38,7 @@ INCS += -I/usr/include/libxml2
 # There is no lint library for libxml2, so we need to avoid linking against
 # it during lint, as well as turning off the warnings lint would generate.
 #
-LDLIBS += -lzfs_jni
+LDLIBS += -lzfs_jni -lnvpair -lzfs
 all install := LDLIBS += -lxml2
 LINTFLAGS += -xerroff=E_NAME_USED_NOT_DEF2
 
