6219276 need per-process equivalent of device context 6244042 x86 kernels do not need default LDTs 6308413 sysi86(SI86DSCR) rejects the first valid custom descriptor #6 with errno
6308413 contributed by Juergen Keil <jk@tools.de>

--- a/usr/src/uts/i86pc/ml/offsets.in
+++ b/usr/src/uts/i86pc/ml/offsets.in
@@ -1,5 +1,5 @@
 \
-\ Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+\ Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 \ Use is subject to license terms.
 \
 \ CDDL HEADER START
@@ -75,6 +75,7 @@ proc		PROCSIZE
 	p_ldt
 	p_ldt_desc
 	p_model
+	p_pctx
 	p_agenttp
 
 _kthread	THREAD_SIZE
