--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -212,6 +212,7 @@ GENUNIX_OBJS +=	\
 		priocntl.o	\
 		priv.o		\
 		priv_const.o	\
+		proc.o		\
 		procset.o	\
 		processor_bind.o	\
 		processor_info.o	\
