6370388 fixes for 6362982 and 6369040 were too optimistic

--- a/usr/src/lib/libresolv/Makefile
+++ b/usr/src/lib/libresolv/Makefile
@@ -83,7 +83,7 @@ package :=	TARGET= package
 
 LIBS = $(DYNLIB)
 
-all: $(SUBDIRS) $(LIBS) fnamecheck
+all: $(SUBDIRS) $(LIBS)
 
 install: all $(ROOTDYNLIBS) $(SUBDIRS)
 
